# Raspi_display

./: AGENTS.md  README.md  REFACTORING_SUMMARY.md  _codeql_detected_source_root
.github/: copilot-instructions.md
doc/: raspi5_golf_sim_design_doc.md
golf-sim/: .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md
golf-sim/_codeql_build_dir/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
golf-sim/_codeql_build_dir/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_physics
golf-sim/data/: course.csv
golf-sim/include/app/: App.hpp
golf-sim/include/application/: CoordinateConverter.hpp  CourseInfo.hpp  CourseRepository.hpp  ScreenFlow.hpp  ShotParameterService.hpp  UseCases.hpp
golf-sim/include/domain/: BallState.hpp  GameState.hpp  GameStateMachine.hpp  PhysicsConfig.hpp  PhysicsEngine.hpp  Trajectory.hpp  Vec3.hpp
golf-sim/include/game/: GameState.hpp
golf-sim/include/infrastructure/: FileCourseRepository.hpp  ISensorProvider.hpp  MockSensorProvider.hpp
golf-sim/include/render/: Renderer.hpp  ViewMode.hpp
golf-sim/src/: main.cpp
golf-sim/src/app/: App.cpp
golf-sim/src/application/: CoordinateConverter.cpp  ScreenFlow.cpp  ShotParameterService.cpp  UseCases.cpp
golf-sim/src/domain/: GameState.cpp  GameStateMachine.cpp  PhysicsEngine.cpp  Trajectory.cpp  Vec3.cpp
golf-sim/src/infrastructure/: FileCourseRepository.cpp  MockSensorProvider.cpp
golf-sim/src/render/: Renderer.cpp
golf-sim/tests/: CMakeLists.txt  test_coordinate_converter.cpp  test_physics.cpp  test_screen_flow.cpp
